--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.1.0",
     "base62": "^2.0.2",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport": "^0.7.0",
