--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,35 @@ services:
     image: postgres:15
     container_name: short-url-postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: short-url
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_DB}
     ports:
       - "55432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+    - app-network
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: short-url-app
+    depends_on:
+      - postgres
+    ports:
+      - "3000:3000"
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+      API_DOMAIN: ${API_DOMAIN}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION: ${JWT_EXPIRATION}
+    networks:
+    - app-network
+
+
+networks:
+  app-network:
 volumes:
   pgdata:
