--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,10 @@ jobs:
       - name: Deploy to Server
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-            cd /path/to/your/project  # Caminho no servidor onde está sua aplicação
+            cd short-url
             git pull origin main
             npm install
             npm run build
+            npx prisma migrate deploy
             pm2 stop short-url-app || true  # Para a aplicação se ela estiver rodando
-            pm2 restart 0 || pm2 start dist/main.js --name shot-url-app
+            pm2 restart 1 || pm2 start dist/src/main.js --name shot-url-app
