fix: use nvm in github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Deploy to Server
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-            npm list -g pm2
-            node -v
+            nvm use --lts
+            npm install -g pm2
             cd short-url
             git pull origin main
             npm install
