--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.1.0",
+    "@sentry/nestjs": "^8.47.0",
+    "@sentry/profiling-node": "^8.47.0",
     "base62": "^2.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
