--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.1.0",
+    "@sentry/integrations": "^7.114.0",
     "@sentry/nestjs": "^8.47.0",
+    "@sentry/node": "^8.47.0",
     "@sentry/profiling-node": "^8.47.0",
+    "@sentry/tracing": "^7.114.0",
     "base62": "^2.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.14.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
