update .env.example with new variables

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,14 @@ JWT_EXPIRATION=""
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_DB=
+
+## Sentry
+
+SENTRY_DNS=
+SENTRY_TRACE_SAMPLE_RATE=
+
+
+## Swagger
+
+APP_DESCRIPTION=
+APP_VERSION=
